Improve references section

--- a/introduction.tex
+++ b/introduction.tex
@@ -3,39 +3,43 @@
 
 \section{Research topic and objective}
 The purpose of this thesis is to discuss the 1873 novel \textit{Marta}, written by the Polish writer Eliza Orzeszkowa (1841-1910), as well as its translations into Esperanto and the indirect translation from Esperanto into Traditional Chinese.
-The goal of the research is to find the similarities and differences between all three versions, analyze the translation techniques used by the two translators.
+The goal of the research is to find the similarities and differences between all three versions. %, analyze the translation techniques used by the two translators.
 Through this process, it should be possible to determine whether any content has been distorted in the process of indirect translation from Esperanto into Chinese, and conversely, if Esperanto can reliably be used as an intermediate language.
 
-Being himself a proponent of the Esperanto movement, the author hopes to prove the usefulness of Esperanto in the field of translation, and by extension, to promote the study and use of this language.
+Being himself a proponent of the Esperanto movement, the author hopes to prove the usefulness of Esperanto in the field of translation, and by extension, to promote the study and use of this language, if only in the academia.
 
 \section{Overview of literature and references}
 In the thesis, three editions of the novel \textit{Marta} are discussed, in three different languages: Polish, Esperanto, and Traditional Chinese.
-The novel was first published in Polish in 1873, in Esperanto in 1910, and in Traditional Chinese in 1948.
+The novel was first published in Polish in 1873, in Esperanto in 1910, and in Traditional Chinese in 1930.
 Ludwik Zamenhof, the creator of Esperanto, % being fluent in Polish,
 translated the novel from the Polish original.
-The Chinese version was translated in May 1928 by Mr. Zhong Xianmin (錘憲民 \nazwisko{Zhōng Xiànmín}%
+The Chinese version was translated in May 1928 by Zhong Xianmin (錘憲民 \nazwisko{Zhōng Xiànmín}%
 \footnote{All Chinese terms mentioned in this thesis are listed in Traditional Chinese characters, together with the \textit{Hanyu Pinyin} romanization (漢語拼音 \pinyin{Hànyǔ Pīnyīn}) with tone marks. The romanizations of common terms are set in italic type, while proper names are set in regular font.}) %
 from Zamenhof's Esperanto translation.
-Zhong Xianmin's translation was first published in 1930 by the Shanghai Beixin Shuju publishing house (上海北新書局 \nazwisko{Shànghǎi Běixīn Shūjú})
+Zhong Xianmin's translation was first published in 1930 by the Shanghai Beixin Shuju publishing house (上海北新書局 \nazwisko{Shànghǎi Běixīn Shūjú}) under the title \textit{Gu yan lei} (孤雁淚 \textit{Gū yàn lèi} `The Tears of a Lonely Wild Goose')
 (Kökény and Bleier 1933: 612; Orzeszko 1948).
 
-None of the 
+As of this writing, none of the translations is easily available in retail or libraries, therefore for research purposes, digitalised versions will be used.
+The Esperanto translation has been published to several websites of Esperanto associations and in general, it is very easy to find with a few keystrokes.
+The Chinese edition has long gone out of print, it is however available through the electronic library system of the National Taiwan Normal University.
+The edition available in the system is dated 1948 and was published by \textit{Guoji Wenhua Fuwu She} (國際文化服務社 \pinyin{Guójì Wénhuà Fúwù shè} `International Society for Cultural Services').
+The title page names three offices of the society, in Shanghai (上海 \toponim{Shànghǎi}), Beiping (北平 \toponim{Běipíng}, present-day Beijing 北京 \toponim{Běijīng}), and Nanjing (南京 \toponim{Nánjīng}), respectively.
 
 \section{Research method and expected outcome}
-A comparative analysis of a single text translated into both Esperanto and through Esperanto into Chinese could determine whether Esperanto can reliably be used as an intermediate language for the translation of literary texts.
 
-The author deems it safe to assume that the translator of the Esperanto edition, Ludwik Lejzer Zamenhof, possessed all means of creating a complete and faithful translation: having grown up in an area where Polish was the language of intelligentsia, he had a good command of the Polish language and a good understanding of the Polish culture.
-He also knew the author of the novel in person and had lived in the area where the plot of the novel was placed.
-Being the creator of the Esperanto language, he knew the language better than anyone else at his time.
-At the same time, Esperanto is a simple and highly flexible language, with grammar and logic based on European languages, including Polish and the grammatically similar Russian, making it relatively easy to translate the Polish original into Esperanto with little to no loss of meaning and high degrees of equivalence.
+A comparative analysis of a single text translated into both Esperanto and through Esperanto into Chinese could help determine whether Esperanto can reliably be used as an intermediate language for the translation of literary texts.
+
+The author deems it safe to assume that the translator of the Esperanto edition, Ludwik Lejzer Zamenhof, possessed all means of creating a complete and faithful translation: having grown up in an area where Polish was the language of intelligentsia, he had a good command of the Polish language, a good understanding of the Polish culture, and decades of experience in writing.
+Being the creator of the Esperanto language, he knew his constructed language better than anyone else at his time.
+He had also met Eliza Orzeszkowa in person and had lived in the area where the plot of the novel was placed.
+At the same time, Esperanto is a simple and highly flexible language, with grammar and logic based on European languages, making it relatively easy to translate the Polish original into Esperanto with little to no loss of meaning and high degrees of equivalence.
 
 On the other hand, Chinese, especially in its written variant (書面語 \pinyin{shūmiànyǔ} `book language'), relies on entirely different patterns than European languages.
 This has to do with the history and development of the Chinese language.
 Up till the 20th century, Chinese was a diglossic language.
 No legal standard of the spoken language existed and numerous spoken varieties were spoken throughout China.
-Those local varieties are referred to in Chinese as \textit{fangyan} (方言 \pinyin{fāngyán} `local language'), a word commonly rendered in English as ``dialect.''
-By Western linguistic standards, these varieties of the language could not be considered dialects of a single language, being to a large extent mutually unintelligible.
-Mair (1991) proposed the adoption of the term ``topolect'' as a translation of \textit{fargyan}.
+These local varieties are referred to in Chinese as \textit{fangyan} (方言 \pinyin{fāngyán} `local language'), a word commonly rendered in English as ``dialect.''
+By Western linguistic standards, these varieties of the language cannot be considered dialects of a single language, being to a large extent mutually unintelligible, therefore in the remaining part of the thesis, the term ``topolect'' shall be used as an equivalent of the Chinese term \textit{fangyan}, as proposed by Mair (1991).
 
 Despite the vast differences between topolects, the writing system was largely uniform throughout China, and has also been used in international correspondence between various countries of the Sinitic cultural circle, particularly in Japan, Korea, and Vietnam.
 In Chinese, this written variety is commonly referred to as \textit{wenyanwen} (文言文 \textit{wényánwén}), and in English as ``classical Chinese'' or ``literary Chinese.''
@@ -46,7 +50,7 @@ The knowledge of various \textit{chengyu} is considered to be an indicator of on
 
 Zhong Xianmin, who translated the novel \textit{Marta} did so based only on the Esperanto edition, without any knowledge of the Polish language.
 Due to these specifics of written Chinese, certain differences are to be expected between the Chinese translation and the Polish original.
-Should the Esperanto translation prove to be a faithful rendition of the Polish original, it follows that any substantial differences between the texts have been introduced in Zhong Xianmin's work.
+Should the Esperanto translation prove to be a faithful rendition of the Polish original, it follows that any substantial differences between the original and the Chinese translation have been introduced in Zhong Xianmin's work.
 
 \section{Historical background of the novel}
 
@@ -66,7 +70,7 @@ The key topics in Polish Positivist literature included the fight for independen
 
 Gloger (2007) states that in the case of Poland, Positivism played a similar role to that of Enlightenment in Western Europe, that is to say, it paved ground for the development of modernism and modernity, popularizing rationalism and the scientific approach to reality. The cultural impact of Enlightenment in Poland was rather limited due to the overall civilizational lag and unfavorable historical circumstances.
 
-\section{The life and times of Eliza Orzeszkowa}
+\subsection{The life and times of Eliza Orzeszkowa}
 
 Eliza Orzeszkowa was born Eliza Pawłowska on June 6th, 1841, in the village of Milkowszczyzna in present-day Belarus, to a family of gentry. Her father, Benedykt Pawłowski, died when she was three years old. 
 At the age of ten, she moved to Warsaw, the present-day capital of Poland, where for the following five years she attended a boarding school run by the nuns of the Order of the Holy Sacrament, where she learned French and German, and explored Polish literature.
@@ -80,7 +84,7 @@ In December 1864, Mr. Orzeszko was arrested and sent to Russia.
 
 In 1866, Eliza settled in Grodno. In 1869, her marriage was annulled.
 
-\section{Names of Eliza Orzeszkowa}
+\subsection{Names of Eliza Orzeszkowa}
 
 In many Slavic languages, including Polish, many family names have traditionally taken a different form when referring to a man, his unmarried daughter, and his wife.
 For instance, the wife of the well-known Polish poet of the Romanticist period, Adam Mickiewicz, was referred to as Celina Mickiewiczowa, and his eldest daughter would be referred to as Maria Mickiewiczówna, up until her marriage.
@@ -122,7 +126,7 @@ In the book, Zamenhof postulated the need for an international auxilliary langua
 He argued that if the humanity had to only learn two languages, their own native language and the proposed bridge language, they would be able to communicate with each other with more ease, enriching all languages and allowing for a better command of one's own native language. The book was subsequently published in Polish, German, and French editions (Zamenhof 2006).
 % TODO: Find a source for Schleyer's inability to converse in Volapük
 
-\section{Esperanto and Volapük}
+\subsection{Esperanto and Volapük}
 Zamenhof was by no means the first man to construct an auxilliary language with the hope of unifying the human race.
 Many similar endeavors had been undertaken before, with the most prominent example being Volapük, designed by a Catholic priest from Germany by the name Johann Martin Schleyer.
 None of those constructed languages had gained any significant international attention or had succeeded in becoming a generally accepted \textit{lingua franca}.
@@ -148,7 +152,7 @@ His vocabulary of Esperanto was mostly based on Latin and Western European langu
 Zamenhof avoided adding too detailed explanations in the belief that the language would eventually develop on its own
 (Kökény and Bleier 1933: 1053-1054).
 
-\section{Early development of Esperanto}
+\subsection{Early development of Esperanto}
 
 In the early stages of the development of Esperanto, the language had no name of its own other than the titular ``international language'' (Esperanto: \textit{lingvo internacia}).
 The speakers of the new language soon decided to baptize the language with a part of Zamenhof's pseudonym, \textit{Doktoro Esperanto}.
@@ -159,7 +163,7 @@ After a period of natural development of the language, in 1905, Zamenhof compile
 This book was designated as the only obligatory authority over the language
 (Kökény and Bleier 1933: 1053-1054).
 
-\section{Esperanto today}
+\subsection{Esperanto today}
 Nowadays, Esperanto is often thought of merely as a Quixotic experiment.
 It has never quite succeeded in becoming a commonly accepted lingua franca, nor could it possibly put an end to all wars---the turbulent history of the 20th century proves otherwise.
 On the other hand, it is by far the most successful constructed language in history, with the estimated number of speakers ranging from 100,000 to 2 million, depending on the source.
