--- a/references.tex
+++ b/references.tex
@@ -2,9 +2,11 @@
 \addcontentsline{toc}{chapter}{References}
 \markboth{References}{References}
 
-Brykowisko. (2011). \textit{Eliza Orzeszkowa. Słownik pisarzy polskich.} Retrieved March, 16th, 2020, from \url{https://www.bryk.pl/slowniki/slownik-pisarzy/85210-orzeszkowa-eliza-1841-1910}.
-
 Bachórz J. \textit{Eliza Orzeszkowa}. Virtual Library of Polish Literature. Retrieved March 7th, 2020, from \url{https://literat.ug.edu.pl/autors/orzeszk.htm}.
+
+Boltinsky D. (2016). \textit{Esperanto in China faces uncertain future.} Retrieved March 24th, 2020, from \url{http://www.china.org.cn/china/2016-07/26/content_38959660.htm}.
+
+Brykowisko. (2011). \textit{Eliza Orzeszkowa. Słownik pisarzy polskich.} Retrieved March 16th, 2020, from \url{https://www.bryk.pl/slowniki/slownik-pisarzy/85210-orzeszkowa-eliza-1841-1910}.
 
 Kökény L. and Bleier V. (1933). \textit{Enciklopedio de Esperanto}. Retrieved March 7th, 2020, from \url{http://www.eventoj.hu/steb/gxenerala_naturscienco/enciklopedio-1/enciklopedio-de-esperanto-1933.pdf}.
 
@@ -16,11 +18,13 @@ Gloger M. (2007). \textit{Pozytywizm: między nowoczesnością a modernizmem} [P
 
 Lai Tzu-Yun 賴慈芸. (2015). \textit{Lai Ciyun zhuanlan: Ye shi renjian beiju? Xunzhao yizhe Zhong Xianmin shimo} 賴慈芸專欄：也是人間悲劇？尋找譯者鍾憲民始末 [Lai Tzu-Yun's Column: A Human Tragedy? The Search for the Translator Zhong Xianmin]. Retrieved March 7th, 2020, from \url{https://www.storm.mg/lifestyle/76287}.
 
+Liu Xiaozhe 劉曉哲. (2016). \textit{Esperanto en Ĉinio}. Retrieved March 24th, 2020, from \url{http://reto.cn/php/esperanto/esperanto-en-cinio/}.
+
 Miłosz, C. (1993). \textit{Historia literatury polskiej: Do roku 1939}. Kraków: ZNAK. 
 
 Okrent A. (2009, July 21). \textit{Discouraging Words: Invented languages and their long history of failure.} Interview with Jason Zasky. Retrieved March 9th, 2020, from \url{http://failuremag.com/article/discouraging-words}.
 
-Mair V. H. (1991). What Is a Chinese Dialect/Topolect? Reflections on Some Key Sino-English Linguistic Terms. \textit{Sino-Platonic Papers}, 29. Retrieved on March 23th, 2020, from \url{http://sino-platonic.org/complete/spp029_chinese_dialect.pdf}.
+Mair V. H. (1991). What Is a Chinese Dialect/Topolect? Reflections on Some Key Sino-English Linguistic Terms. \textit{Sino-Platonic Papers}, 29. Retrieved March 23th, 2020, from \url{http://sino-platonic.org/complete/spp029_chinese_dialect.pdf}.
 
 Orzeszko E. (1948). \textit{Gū yàn lèi} 孤雁淚 [Marta]. Zhong Xianmin 鍾憲民 (Trans.). Shanghai, China: Guoji Wenhua Fuwushe.
 
