Improve the chapter on Esperanto

--- a/esperanto.tex
+++ b/esperanto.tex
@@ -1,25 +1,27 @@
 \chapter{The Esperanto movement}
 
 Esperanto (Chinese: 世界語 \pinyin{Shìjièyǔ}, lit. `world language') is a constructed language created by Ludwik Lejzer Zamenhof (Esperanto: Ludoviko Lazaro Zamenhof, 1859-1917), a Jewish ophthalmologist from Białystok.
-This chapter deals with the constructed language Esperanto.
-It briefly describes the life story of Ludwik Zamenhof, the creator of Esperanto, the development of his language and the Esperanto movement, and the state of the Esperanto movement to date.
+This chapter describes the language, the life story of its creator, the development of the Esperanto movement, and the state of the Esperanto movement to date.
 
-\section{The origins of Esperanto}
-Ludwik Lejzer Zamenhof was born on December 15th, 1859, in the city of Białystok, Congress Poland, Russian Empire (present-day Białystok, Poland), an ethnically and linguistically diverse city inhabited by Poles, Russians, Germans, and Jews.
-% Each and all of these nations spoke their own language and despised the others for spea
-Having been raised as an idealist, in the belief that all men were brothers, he had noticed the discrepancy between his ideals and the discriminative, exclusive attitudes of the peoples inhabiting his home town.
-Ever since his early childhood, he had a vision of a single language that could unite all nations (Zamenhof 1904).
+\section{The life of Ludwik Lejzer Zamenhof}
+Ludwik Lejzer Zamenhof was born on December 15th, 1859, in the city of Białystok, Congress Poland, Russian Empire (present-day Białystok, Poland).
+At the time, the city was ethnically and linguistically diverse, and was inhabited by Jews, Russians, Poles, and Germans.
+Each and all of these nations spoke their own language.
+The Jewish population spoke Yiddish, a peculiar amalgam of High German mixed with Hebrew, Aramaic, and Slavic languages. Polish was the language of intelligentsia, Belarussian---the language used in the streets, German---the language of business, and Russian---the official language in the area.
+In Białystok, it was not uncommon to speak and understand all of the languages that were used in the city, but young Ludwik had admittedly attained a high degree of familiarity with all of these languages at the age of five.
+Having been raised as an idealist, in the belief that all men were brothers, young Ludwik had soon noticed the discrepancy between his ideals and the discriminative, exclusive attitudes of the peoples inhabiting his home town.
+Ever since his early childhood, he had a vision of a single language that could unite all nations (Zamenhof 1904, Ziółkowska 2008: 3).
 
-The father and grandfather of Ludwik Zamenhof had been language teachers, and Ludwik himself had a deep interest for languages since early childhood, dreaming of becoming a great Russian poet.
-At the age of ten, he wrote a five-act tragedy.
+The father and grandfather of Ludwik Zamenhof had been language teachers, and Ludwik himself had a deep interest for languages since early childhood.
+As a young boy, he had dreamt of becoming a great Russian poet, and at the age of ten, he wrote a five-act tragedy in Russian.
 Between 1870 he enrolled at a gymnasium in Białystok, which he attended for nine years.
-In 1873, he moved with his parents to Warsaw, where he studied Latin and Ancient Greek, and then enrolled at the Philological Gymnasium (a high school with a particular emphasis on the study of languages).
+In 1873, he moved with his parents to Warsaw, where he studied Latin and Ancient Greek, and then enrolled at the Philological Gymnasium, a high school with a particular emphasis on the study of languages.
 He graduated in 1879 and moved to Moscow to attend the faculty of medicine.
 In 1881, due to the poor financial situation of his family, he was compelled to move back to Warsaw, where he obtained his medical degree in 1885.
 After a period of medical practice he realized that he was too sympathetic for his patients, that their suffering and death affected him too much.
 This was the reason he became a specialist in ophthalmology, a relatively peaceful branch of medicine.
-This was also the time when he adopted his pseudonym, ``Doktoro Esperanto.''
-In the constructed language, \textit{Esperanto} signified `the one who hopes,'
+This was also the time when he adopted his pseudonym, \textit{Doktoro Esperanto}, ``Doctor Hopeful''.
+In his constructed language, \textit{Esperanto} signified `the one who hopes,'
 the suffix \textit{-anto} indicating the gerund form, analogous to such Latin words as \textit{memorandum} or the ``verb + \textit{-ing}'' form in English
 (Kökény and Bleier 1933: 1048).
 
@@ -28,10 +30,11 @@ The language authored by Zamenhof was first described in a book published in the
 The first book in its Russian edition was titled \textit{Mezhdunarodnyy Yazyk. Predisloviye i polnyy uchebnik.}
 (Pre-reform Russian: Между\-на\-род\-ный Языкъ. Предисловие и полный учебникъ%
 \footnote{All Russian terms in the thesis are rendered in original Cyryllic script and transliterated according to the BGN/PCGN romanization system for Russian.} `The International Language. Introduction and Complete Textbook').
-This book has subsequently been translated into English as \textit{Dr. Esperanto's International Language, Introduction and Complete Grammar}.
+This book has subsequently been translated into English as \textit{Dr. Esperanto's International Language, Introduction and Complete Grammar}, as well as Polish, German, and French.
 The book contained a basic course of Zamenhof's constructed language together with a brief dictionary and is commonly referred to as \textit{The First Book} (Esperanto: \textit{Unua Libro}).
 In the book, Zamenhof postulated the need for an international auxilliary language that could connect people from different cultural and language backgrounds.
-He argued that if the humanity had to only learn two languages, their own native language and the proposed bridge language, they would be able to communicate with each other with more ease, enriching all languages and allowing for a better command of one's own native language. The book was subsequently published in Polish, German, and French editions (Zamenhof 2006).
+He argued that if the humanity had to only learn two languages, their own native language and the proposed bridge language, they would be able to communicate with each other with more ease, enriching all languages and allowing for a better command of one's own native language.
+(Zamenhof 2006).
 % TODO: Find a source for Schleyer's inability to converse in Volapük
 
 \subsection{Esperanto and Volapük}
@@ -46,8 +49,8 @@ Their failure, Zamenhof argued, had been due to their failure to meet three cruc
   \item convincing indifferent people around the world to learn the proposed international language (Zamenhof 2006).
 \end{enumerate}
 
-Schleyer made all efforts to make his language as comprehensive and precise as possible.
-He considered Volapük to be his language and property, which to some extent may have hindered the development of the language.
+Schleyer had made all efforts to make his language as comprehensive and precise as possible.
+He considered Volapük to be his language and property, and had rejected other people's contributions, which to some extent may have hindered the development of the language.
 The vocabulary of Volapük was based mostly on English, with some influences of German and French.
 Most of the loanwords deviated so much from their respective source languages that they were beyond easy recognition by speakers of these languages.
 The language was difficult to understand for anyone without prior training, while the distortions obfuscated the European origin of the language and made it language equally easy---or equally hard---to non-Europeans as to Europeans.
