--- a/references.tex
+++ b/references.tex
@@ -40,3 +40,5 @@ Universala Esperanto-Asocio. (2019). \textit{Rezolucio de la 104-a Universala Ko
 Zamenhof L. L. (1904). \textit{The Birth of Esperanto}. Ellis J. (Trans.). Private letter with unknown recipient.
 
 Zamenhof L. L. (2006). \textit{Dr. Esperanto's International Language}. Geoghegan, R. H. (Trans.). Berwick, Nova Scotia, Canada. Retrieved March 9th, 2020, from \url{https://en.wikisource.org/wiki/Dr._Esperanto\%27s_International_Language}.
+
+Ziółkowska M. (2008). \textit{Doctor Esperanto. Novela biográfica sobre Luis Lázaro Zamenhof}. Retrieved March 24th, 2020, from \url{http://luisguillermo.com/doctoresperanto/Doctor-Esperanto.pdf}.
