Add more information on Esperanto

--- a/esperanto.tex
+++ b/esperanto.tex
@@ -70,8 +70,12 @@ The speakers of the new language soon decided to baptize the language with a par
 A person who learns and speaks Esperanto is referred to as an \textit{Esperantist} (Esperanto: \textit{Esperantisto}, from \textit{Esperanto} + \textit{-isto}, suffix indicating a person who does something over a longer period of time, analogous to \textit{-ist} in European languages).
 
 After a period of natural development of the language, in 1905, Zamenhof compiled another work called \textit{Fundamento de Esperanto} (English: \textit{Foundation of Esperanto}), in which he included a more detailed grammar, exercises, and an extended set of vocabulary, in five national languages: French, English, German, Russian, and Polish.
-This book was designated as the only obligatory authority over the language
 (Kökény and Bleier 1933: 1053-1054).
+
+The first World Esperanto Congress was held in August, 1905, in Boulogne-sur-Mer, France.
+688 people of different nationalities attended the event, which was held entirely in Esperanto.
+During the congress, the \textit{Declaration on the Essence of Esperantism} (Esperanto: \textit{Deklaracio pri la esenco de la esperantismo}) was ratified, which designated the book \textit{Foundation of Esperanto} as the only obligatory authority over the language%
+\footnote{From the website of the 100th World Esperanto Congress in Lille, France. Retrieved March 25th, 2020, from \url{http://www.lve-esperanto.org/lille2015/eo/memoro/index.htm}.}.
 
 \subsection{Esperanto in China}
 According to Boltinsky (2016), the most famous proponent of Esperanto in China had been the writer and poet Lu Xun (魯迅 \nazwisko{Lǔ xùn}, 1881-1936), an important figure in the May Fourth Movement (五四運動 \pinyin{Wǔ sì yùndòng}) that advocated the transition from literary to vernacular Chinese.
@@ -91,7 +95,9 @@ and China Radio International\footnote{\url{http://esperanto.cri.cn/}, retrieved
 \subsection{Esperanto today}
 Nowadays, Esperanto is often thought of merely as a Quixotic experiment.
 It has never quite succeeded in becoming a commonly accepted lingua franca, nor could it possibly put an end to all wars---the turbulent history of the 20th century proves otherwise.
-On the other hand, it is by far the most successful constructed language in history, with the estimated number of speakers ranging from 100,000 to 2 million, depending on the source.
+On the other hand, it is by far the most successful constructed language in history.
+Sikosek (2003) estimates the number of speakers of Esperanto at a maximum of 40,000-50,000.
+
 Esperanto is actively spoken not only by L2 speakers, but quite often also by their bilingual or multilingual offspring.
 In Esperanto, native speakers of Esperanto are referred to as \textit{denaskuloj} (from \textit{denask-} `from birth' and \textit{ulo} `person, individual') or \textit{denaskaj Esperantistoj} (`Esperantist from birth')
 (Britannica 2019a).
