--- a/introduction.tex
+++ b/introduction.tex
@@ -1,8 +1,8 @@
 \chapter{Introduction}
 \defspacing
 
-\section{Research topic and objective}
-The purpose of this thesis is to discuss the 1873 novel \textit{Marta}, written by the Polish writer Eliza Orzeszkowa (1841-1910), as well as its translations into Esperanto and the indirect translation from Esperanto into Traditional Chinese.
+\section{Research topic and objectives}
+The purpose of this thesis is to discuss the 1873 novel \textit{Marta}, written by the Polish writer Eliza Orzeszkowa (1841-1910), as well as its translations into Esperanto and the indirect translation from Esperanto into Chinese.
 The goal of the research is to find the similarities and differences between all three versions. %, analyze the translation techniques used by the two translators.
 Through this process, it should be possible to determine whether any content has been distorted in the process of indirect translation from Esperanto into Chinese, and conversely, if Esperanto can reliably be used as an intermediate language.
 
@@ -10,7 +10,7 @@ Being himself a proponent of the Esperanto movement, the author hopes to prove t
 
 \section{Overview of literature and references}
 In the thesis, three editions of the novel \textit{Marta} are discussed, in three different languages: Polish, Esperanto, and Traditional Chinese.
-The novel was first published in Polish in 1873, in Esperanto in 1910, and in Traditional Chinese in 1930.
+The novel was first published in Polish in 1873, in Esperanto in 1910, and in Chinese in 1930.
 Ludwik Zamenhof, the creator of Esperanto, % being fluent in Polish,
 translated the novel from the Polish original.
 The Chinese version was translated in May 1928 by Zhong Xianmin (錘憲民 \nazwisko{Zhōng Xiànmín}%
@@ -37,13 +37,14 @@ At the same time, Esperanto is a simple and highly flexible language, with gramm
 On the other hand, Chinese, especially in its written variant (書面語 \pinyin{shūmiànyǔ} `book language'), relies on entirely different patterns than European languages.
 This has to do with the history and development of the Chinese language.
 Up till the 20th century, Chinese was a diglossic language.
-No legal standard of the spoken language existed and numerous spoken varieties were spoken throughout China.
+No legal standard of the spoken language existed and numerous spoken varieties were used throughout China.
 These local varieties are referred to in Chinese as \textit{fangyan} (方言 \pinyin{fāngyán} `local language'), a word commonly rendered in English as ``dialect.''
 By Western linguistic standards, these varieties of the language cannot be considered dialects of a single language, being to a large extent mutually unintelligible, therefore in the remaining part of the thesis, the term ``topolect'' shall be used as an equivalent of the Chinese term \textit{fangyan}, as proposed by Mair (1991).
 
-Despite the vast differences between topolects, the writing system was largely uniform throughout China, and has also been used in international correspondence between various countries of the Sinitic cultural circle, particularly in Japan, Korea, and Vietnam.
+Despite the vast differences between topolects, the writing system has largely been uniform throughout China, and has also been used in international correspondence between various countries of the Sinitic cultural circle, particularly in Japan, Korea, and Vietnam.
 In Chinese, this written variety is commonly referred to as \textit{wenyanwen} (文言文 \textit{wényánwén}), and in English as ``classical Chinese'' or ``literary Chinese.''
-The language had undergone very little change between Han dynasty (漢朝 \pinyin{Hàncháo}) and the 20th century, effectively preserving a substantial part of cultural references, vocabulary, and idiomatic expressions.
+The language had undergone very little change between the Han dynasty (漢朝 \pinyin{Hàncháo}, 206 BC-220 AD) and the 20th century, when it was largely replaced by written vernacular Chinese (白話文 \pinyin{báihuàwén}).
+A substantial part of cultural references, vocabulary, and idiomatic expressions has been preserved from the literary language.
 % A corpus of ancient text and Confucian classics written in this language has for many centuries formed the basis of a system of formal education and imperial examinations for civil servants, which had not been abolished until as late as 1905.
 Many idiomatic expressions originating from classical texts, the so-called \textit{chengyu} (成語 \pinyin{chéngyǔ}), are commonly used to precisely convey emotions and moral concepts, or as set phrases in formal correspondence.
 The knowledge of various \textit{chengyu} is considered to be an indicator of one's erudition, and the use of these expressions is an important differentiating factor between colloquial Chinese and its written counterpart.
@@ -60,13 +61,15 @@ After the partitions, the ruling forces exercised policies aiming to uproot any 
 
 For 123 years, between 1795 and 1918, the Polish people's struggle for independence constituted an important topic in Polish-language literature.
 After the failure of the 1863 January Uprising against the Russian Empire, the Polish people were disappointed with Romanticism and slogans of armed fight for independence.
-The fallen uprising was an important milestone in the development of socialism.
-It was in honor of the fallen uprising that a worker gathering was held in 1864, attended by Marx himself, resulting in the founding of the International Workingmen's Association, also known as the ``First International.''
+The fallen uprising and the Polish question had also been an important topic for European socialists
+(Stekloff 1928).
 
 The end of the January uprising is considered to be the beginning of a literary genre known as the ``Warsaw Positivism'' (French: \textit{positivisme varsovien}).
+This philosophy emphasized the importance of ``organic work'' (Polish: \textit{praca organiczna}), that is, active development of education and economy.
 % It was particularly important in the works of Positivist writers, who believed that the key to independence was education and hard work, rather than uprisings and revolutions.
 The key topics in Polish Positivist literature included the fight for independence, the emancipation of serfs and women, promoting science, medicine and public hygiene, and the assimilation of Jews into the Polish society.
-(TODO: source?)
+Besides Eliza Oreszkowa, important representants of Warsaw Positivism included Bolesław Prus (1847-1912), Maria Konopnicka (1842-1910), and Henryk Sienkiewicz (1846-1916), the laureate of the Nobel Prize in Literature 1905
+(eSzkola.pl).
 
 Gloger (2007) states that in the case of Poland, Positivism played a similar role to that of Enlightenment in Western Europe, that is to say, it paved ground for the development of modernism and modernity, popularizing rationalism and the scientific approach to reality. The cultural impact of Enlightenment in Poland was rather limited due to the overall civilizational lag and unfavorable historical circumstances.
 
