--- a/references.tex
+++ b/references.tex
@@ -2,19 +2,23 @@
 \addcontentsline{toc}{chapter}{References}
 \markboth{References}{References}
 
+% \textit{1905 --- Kongresa programo.} 100-a Universala Kongreso de Esperanto. Retrieved March 25th, 2020, from \url{http://www.lve-esperanto.org/lille2015/eo/memoro/1905-kongresa-programo.htm}.
+
 Bachórz J. \textit{Eliza Orzeszkowa}. Virtual Library of Polish Literature. Retrieved March 7th, 2020, from \url{https://literat.ug.edu.pl/autors/orzeszk.htm}.
 
 Boltinsky D. (2016). \textit{Esperanto in China faces uncertain future.} Retrieved March 24th, 2020, from \url{http://www.china.org.cn/china/2016-07/26/content_38959660.htm}.
 
 Brykowisko. (2011). \textit{Eliza Orzeszkowa. Słownik pisarzy polskich.} Retrieved March 16th, 2020, from \url{https://www.bryk.pl/slowniki/slownik-pisarzy/85210-orzeszkowa-eliza-1841-1910}.
 
-Kökény L. and Bleier V. (1933). \textit{Enciklopedio de Esperanto}. Retrieved March 7th, 2020, from \url{http://www.eventoj.hu/steb/gxenerala_naturscienco/enciklopedio-1/enciklopedio-de-esperanto-1933.pdf}.
+eSzkola.pl. \textit{Pozytywizm warszawski --- charakterystyka i przedstawiciele}. Retrieved March 25th, 2020, from \url{https://eszkola.pl/jezyk-polski/pozytywizm-warszawski-1369.html}.
 
 The Editors of Encyclopaedia Britannica. (2019). \textit{Esperanto}. In \textit{Encyclopædia Britannica}. Retrieved March 9th, 2020, from \url{https://www.britannica.com/topic/Esperanto}.
 
 The Editors of Encyclopaedia Britannica. (2019). \textit{Eliza Orzeszkowa}. In \textit{Encyclopædia Britannica}. Retrieved March 7th, 2020, from \url{https://www.britannica.com/biography/Eliza-Orzeszkowa}.
 
 Gloger M. (2007). \textit{Pozytywizm: między nowoczesnością a modernizmem} [Positivism: Between Modernity and Modernism]. \textit{Pamiętnik Literacki. Czasopismo kwartalne poświęcone historii i krytyce literatury polskiej}, 2007(1). Retrieved March 7th, 2020, from \url{https://www.ceeol.com/search/article-detail?id=200994}.
+
+Kökény L. and Bleier V. (1933). \textit{Enciklopedio de Esperanto}. Retrieved March 7th, 2020, from \url{http://www.eventoj.hu/steb/gxenerala_naturscienco/enciklopedio-1/enciklopedio-de-esperanto-1933.pdf}.
 
 Lai Tzu-Yun 賴慈芸. (2015). \textit{Lai Ciyun zhuanlan: Ye shi renjian beiju? Xunzhao yizhe Zhong Xianmin shimo} 賴慈芸專欄：也是人間悲劇？尋找譯者鍾憲民始末 [Lai Tzu-Yun's Column: A Human Tragedy? The Search for the Translator Zhong Xianmin]. Retrieved March 7th, 2020, from \url{https://www.storm.mg/lifestyle/76287}.
 
@@ -34,6 +38,10 @@ Orzeszko E. (1910). \textit{Marta}. L.L. Zamenhof (Trans.). Retrieved from \url{
 % https://www.rulit.me/books/marta-read-366296-1.html
 
 Sevänen E. (2018). Modern Literature as a Form of Discourse and Knowledge of Society. \textit{Sociologias}, 20(48). doi:10.1590/15174522-020004803. Retrieved on March 7th, 2020.
+
+Sikosek, Z. M. (2003). \textit{Esperanto sen mitoj.} Antwerp, Belgium: Flandra Esperanto-Ligo. 
+
+Stekloff G. M. (1928). \textit{History of The First International}. London, England: Martin Lawrence Limited.
 
 Universala Esperanto-Asocio. (2019). \textit{Rezolucio de la 104-a Universala Kongreso de Esperanto} [Resolution of the 104th World Esperanto Congress]. Retrieved March 23th, 2020, from \url{https://uea.org/aktuale/komunikoj/2019/Rezolucio-de-la-104-a-Universala-Kongreso-de-Esperanto}.
 
