Convert Esperanto subsections to sections

--- a/esperanto.tex
+++ b/esperanto.tex
@@ -25,7 +25,7 @@ In his constructed language, \textit{Esperanto} signified `the one who hopes,'
 the suffix \textit{-anto} indicating the gerund form, analogous to such Latin words as \textit{memorandum} or the ``verb + \textit{-ing}'' form in English
 (Kökény and Bleier 1933: 1048).
 
-\subsection{First appearance of Esperanto}
+\section{First appearance of Esperanto}
 The language authored by Zamenhof was first described in a book published in the Russian language in 1887 in Warsaw.
 The first book in its Russian edition was titled \textit{Mezhdunarodnyy Yazyk. Predisloviye i polnyy uchebnik.}
 (Pre-reform Russian: Между\-на\-род\-ный Языкъ. Предисловие и полный учебникъ%
@@ -37,7 +37,7 @@ He argued that if the humanity had to only learn two languages, their own native
 (Zamenhof 2006).
 % TODO: Find a source for Schleyer's inability to converse in Volapük
 
-\subsection{Esperanto and Volapük}
+\section{Esperanto and Volapük}
 Zamenhof was by no means the first man to construct an auxilliary language with the hope of unifying the human race.
 Many similar endeavors had been undertaken before, with the most prominent example being Volapük, designed by a Catholic priest from Germany by the name Johann Martin Schleyer.
 None of those constructed languages had gained any significant international attention or had succeeded in becoming a generally accepted \textit{lingua franca}.
@@ -63,7 +63,7 @@ His vocabulary of Esperanto was mostly based on Latin and Western European langu
 Zamenhof avoided adding too detailed explanations in the belief that the language would eventually develop on its own
 (Kökény and Bleier 1933: 1053-1054).
 
-\subsection{Early development of Esperanto}
+\section{Early development of Esperanto}
 
 In the early stages of the development of Esperanto, the language had no name of its own other than the titular ``international language'' (Esperanto: \textit{lingvo internacia}).
 The speakers of the new language soon decided to baptize the language with a part of Zamenhof's pseudonym, \textit{Doktoro Esperanto}.
@@ -77,7 +77,7 @@ The first World Esperanto Congress was held in August, 1905, in Boulogne-sur-Mer
 During the congress, the \textit{Declaration on the Essence of Esperantism} (Esperanto: \textit{Deklaracio pri la esenco de la esperantismo}) was ratified, which designated the book \textit{Foundation of Esperanto} as the only obligatory authority over the language%
 \footnote{From the website of the 100th World Esperanto Congress in Lille, France. Retrieved March 25th, 2020, from \url{http://www.lve-esperanto.org/lille2015/eo/memoro/index.htm}.}.
 
-\subsection{Esperanto in China}
+\section{Esperanto in China}
 According to Boltinsky (2016), the most famous proponent of Esperanto in China had been the writer and poet Lu Xun (魯迅 \nazwisko{Lǔ xùn}, 1881-1936), an important figure in the May Fourth Movement (五四運動 \pinyin{Wǔ sì yùndòng}) that advocated the transition from literary to vernacular Chinese.
 
 Liu (2016) names two periods in Chinese history during which Esperanto had enjoyed relative popularity.
@@ -92,7 +92,7 @@ Nowadays, there are three news outlets in the People's Republic of China that pu
 and China Radio International\footnote{\url{http://esperanto.cri.cn/}, retrieved March 24th, 2020.}
 (Boltinsky 2016).
 
-\subsection{Esperanto today}
+\section{Esperanto today}
 Nowadays, Esperanto is often thought of merely as a Quixotic experiment.
 It has never quite succeeded in becoming a commonly accepted lingua franca, nor could it possibly put an end to all wars---the turbulent history of the 20th century proves otherwise.
 On the other hand, it is by far the most successful constructed language in history.
