Change thesis => research proposal

--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 \input{_preamble}
 \begin{document}
 \frenchspacing
-\input{titlepage}
+\input{titlepage_proposal}
 \tableofcontents
 \include{introduction}
 \include{esperanto}
