Set smaller font on titlepage

--- a/titlepage_proposal.tex
+++ b/titlepage_proposal.tex
@@ -3,7 +3,7 @@
   \begin{center}%
     {\large 國立臺灣師範大學翻譯研究所碩士論文計劃\par}
 
-    {\large A Research Proposal Submitted to Graduate Institute of Translation and Interpretation National Taiwan Normal University\par}
+    {A Research Proposal Submitted to Graduate Institute of Translation and Interpretation National Taiwan Normal University\par}
     \par
   \end{center}%
   \vspace{1cm plus 1fill}
